--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,24 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100%;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.App-body {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.App-form {
+  background-color: #ADD8E6;
+  padding: 20px;
 }
 
 @keyframes App-logo-spin {
@@ -37,4 +51,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.label-text-input {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.text-field-input {
+  font-size: 16px;
+  padding: 10px;
+}
+
+.result-text-container {
+  flex: 1;
+  background-color: #E6E6FA;
+}
+
+.result-text-container p {
+  font-size: 20px;
+  margin-bottom: 10px;
+  width: 100%;
 }
