--- a/src/pages/QuestionsPage.module.scss
+++ b/src/pages/QuestionsPage.module.scss
@@ -1,5 +1,33 @@
 @import '../palette.scss';
 
+
+.Container {
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.Form {
+  background-color: #ADD8E6;
+  padding: 20px;
+}
+
+.TextFieldInput {
+  font-size: 16px;
+  padding: 10px;
+}
+
+.ResultText {
+  flex: 1;
+  background-color: #E6E6FA;
+  font-size: 20px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+
 .Header {
   background-color: #282c34;
   min-height: 20vh;
