--- a/src/pages/QuestionsPage.module.scss
+++ b/src/pages/QuestionsPage.module.scss
@@ -9,12 +9,12 @@
   flex-direction: column;
 }
 
-.Image {
+.ImageHeader {
   max-height: 20vh;
 }
 
 .Form {
-  background-color: #ADD8E6;
+  background-color: $antique-white;
   padding: 20px;
 }
 
@@ -31,6 +31,10 @@
   width: 100%;
 }
 
+.ImageSmall {
+  float: left;
+  max-height: 10vh;
+}
 
 .Header {
   background-color: #282c34;
@@ -61,4 +65,52 @@
 	border-top: 0;
 	margin-top: -10px;
 	margin-left: -20px;
+}
+
+.SpeechBubbleBody {
+	position: relative;
+	background: $rosy-brown;
+	border-radius: .4em;
+	padding: 20px;
+	margin: 20px;
+  margin-left: 100px;
+}
+
+.SpeechBubbleBody:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 25%;
+	width: 0;
+	height: 0;
+	border: 20px solid transparent;
+	border-right-color: $rosy-brown;
+	border-left: 0;
+	border-top: 0;
+	margin-top: -10px;
+	margin-left: -20px;
+}
+
+.SpeechBubbleQuestions {
+	position: relative;
+	background: $antique-white;
+	border-radius: .4em;
+	padding: 20px;
+	margin: 20px;
+  margin-right: 100px; 
+}
+
+.SpeechBubbleQuestions:after {
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 20px solid transparent;
+	border-left-color: $antique-white;
+	border-right: 0;
+	border-top: 0;
+	margin-top: -10px;
+	margin-right: -20px;
 }
