Small css updates

--- a/src/pages/QuestionsPage.module.scss
+++ b/src/pages/QuestionsPage.module.scss
@@ -37,7 +37,7 @@
 }
 
 .Header {
-  background-color: #282c34;
+  background-color: $outer-space;
   min-height: 20vh;
   display: flex;
   font-size: calc(10px + 2vmin);
