--- a/src/pages/HowOldAreYouPage.module.scss
+++ b/src/pages/HowOldAreYouPage.module.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
 	width: 100%;
-  height: 100vh;
+	min-height: 100vh;
   text-align: center;
 	background-color: $periwinkle;
 	overflow: auto;
