--- a/src/pages/QuestionsPage.module.scss
+++ b/src/pages/QuestionsPage.module.scss
@@ -3,7 +3,7 @@
 
 .Container {
   width: 100%;
-  height: 100vh;
+	min-height: 100vh;
   text-align: center;
   display: flex;
   flex-direction: column;
