Update final css

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,7 @@ img {
 	--ion-color-new-contrast-rgb: 0,0,0;
 	--ion-color-new-shade: #5ca56c;
 	--ion-color-new-tint: #78c288;
+	--ion-border-radius: 2em;
 }
 
 .ion-color-new {
