--- a/src/pages/QuestionsPage.module.scss
+++ b/src/pages/QuestionsPage.module.scss
@@ -53,7 +53,8 @@
 	background: $rosy-brown;
 	border-radius: .4em;
 	padding: 20px;
-	margin: 20px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .SpeechBubble:after {
