--- a/src/pages/QuestionsPage.module.scss
+++ b/src/pages/QuestionsPage.module.scss
@@ -40,8 +40,11 @@
 
 .Header {
   background-color: $periwinkle;
-  display: flex;
   font-size: calc(10px + 2vmin);
+}
+
+.Welcome {
+	display: flex;
 }
 
 .SpeechBubble {
