--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,6 +2,7 @@
 
 .App {
   display: flex;
+  height: 100%;
   flex-direction: column;
   align-items: center;
   background-color: $periwinkle;
@@ -11,6 +12,7 @@
 .Content{
   max-width: 800px; 
 	margin: 0 auto !important; 
-	float: none !important; 
+	float: none !important;
+  overflow: auto;
 }
 
