--- a/src/components/ProfilePicture.module.scss
+++ b/src/components/ProfilePicture.module.scss
@@ -1,11 +1,10 @@
 
 
 .ProfilePictureContainer {
-	justify-content: flex-end;
-	margin-right: 10px;
-	display: flex;
-	font-size: calc(8px + 1vmin);
-	align-items: center;
+    margin-right: 10px;
+    font-size: calc(8px + 1vmin);
+    flex: 50%;
+    text-align: right;
 }
 
 
