--- a/src/components/LoginButton.module.scss
+++ b/src/components/LoginButton.module.scss
@@ -1,11 +1,11 @@
 
 
+
 .LoginButtonContainer {
-	justify-content: flex-end;
 	margin-right: 10px;
-	display: flex;
 	font-size: calc(8px + 1vmin);
-	align-items: center;
+	flex: 50%;
+	text-align: right;
 }
 
 
